<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="49dp"
        >

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/calendar_prev_button"
            android:layout_toLeftOf="@+id/calendar_date_display"
            android:layout_centerVertical="true"
            android:background="@drawable/left"
            android:layout_marginRight="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calendar_date_display"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textSize="18dp"
            />

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/calendar_next_button"
            android:layout_toRightOf="@+id/calendar_date_display"
            android:layout_centerVertical="true"
            android:background="@drawable/right"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="25dp"/>

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/close_char"
            android:layout_alignParentRight="true"
            android:background="@drawable/close"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/calendar_header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/sun"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/mon"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/tue"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/wed"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/thu"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/fri"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/sat"/>

    </LinearLayout>

    <GridView
        android:id="@+id/calendar_grid"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:numColumns="7"/>

</LinearLayout>