<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/setting_header"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/white_tools"
            android:layout_centerInParent="true"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:id="@+id/confirm"
            android:layout_alignParentRight="true"
            android:background="@drawable/confirm"
            />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sv_setting"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/routine_cost_earn"
                android:id="@+id/routine_cost_earn"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/circle_angle_button"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="14dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/earn_category"
                android:id="@+id/earn_category"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/circle_angle_button"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cost_category"
                android:id="@+id/cost_category"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/circle_angle_button"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category_icon"
                android:id="@+id/category_icon"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/circle_angle_button"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textSize="14dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/circle_angle_button"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/colorBlack"
                    android:padding="15dp"
                    android:text="@string/start"
                    android:layout_alignParentLeft="true"/>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/widget"
                android:textSize="14dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/num_row"
                android:id="@+id/num_row"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/circle_angle_button"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_display"
                android:id="@+id/main_display"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/circle_angle_button"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_setting"
                android:textSize="14dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/in_and_out"
                android:id="@+id/in_and_out"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/circle_angle_button"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>