<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:id="@+id/date_row"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll_record"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:gravity="center"
        android:text="@string/edit_mode"
        android:textColor="@color/greyed_out"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/delete"
            android:id="@+id/delete"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorBackground"
            android:background="@color/color_del"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/cancel"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorBackground"
            android:background="@color/colorAutoTextBG"
            android:id="@+id/cancel"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>

    </LinearLayout>
</LinearLayout>