<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/rl_line1">


        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/prev"
            android:layout_toLeftOf="@+id/today_date"
            android:background="@drawable/left"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/today_date"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="18dp"
            />

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/next"
            android:layout_toRightOf="@+id/today_date"
            android:background="@drawable/right"
            android:layout_marginLeft="10dp"/>

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/close_char"
            android:layout_alignParentRight="true"
            android:background="@drawable/close"/>

    </RelativeLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rg_line"
        android:gravity="center">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_outcome"
            android:textSize="18dp"
            android:checked="true"
            android:text="@string/outcome"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_income"
            android:textSize="18dp"
            android:text="@string/income"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_all"
            android:textSize="18dp"
            android:text="@string/all"/>

    </RadioGroup>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/LineChartView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>