<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:id="@+id/rl_line1">
        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:id="@+id/settings"
            android:background="@drawable/tools"
            />

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/prev"
            android:layout_toLeftOf="@+id/today_date"
            android:background="@drawable/left"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/today_date"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="18dp"
            />

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/next"
            android:layout_toRightOf="@+id/today_date"
            android:background="@drawable/right"
            android:layout_marginLeft="10dp"/>

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/statistics"
            android:layout_alignParentRight="true"
            android:background="@drawable/book"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/circle_angle_fragment"
        android:layout_below="@+id/rl_line1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rl_line2"
            android:layout_alignParentTop="true"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1.0"
                android:background="@drawable/view_with_frame"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:hint="@string/category"
                    android:id="@+id/category"
                    android:background="@null"
                    android:textAlignment="center"
                    android:singleLine="true"
                    android:paddingLeft="5dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1.0"
                android:background="@drawable/view_with_frame"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:gravity="center"
                    android:paddingRight="5dp"
                    android:id="@+id/bt_time"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rl_line3"
            android:layout_below="@+id/rl_line2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/view_with_frame"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/subcategory"
                    android:paddingLeft="5dp"
                    android:background="@null"
                    android:textAlignment="center"
                    android:singleLine="true"
                    android:id="@+id/sub_category"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/view_with_frame"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/note"
                    android:paddingRight="5dp"
                    android:background="@null"
                    android:textAlignment="center"
                    android:singleLine="true"/>

            </LinearLayout>
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl_line4"
            android:layout_below="@+id/rl_line3"
            >

            <EditText
                android:id="@+id/et_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:inputType="numberDecimal"
                android:background="@null"
                android:textStyle="bold"
                android:hint="@string/price"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:textAlignment="center"
                />

            <ImageButton
                android:id="@+id/ib_save"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:layout_alignParentRight="true"
                android:paddingRight="5dp"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>