<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/setting_header"
        android:layout_alignParentTop="true"
        >

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:id="@+id/back"
            android:layout_alignParentLeft="true"
            android:background="@drawable/back"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/routine_rule"
        android:layout_below="@+id/setting_header"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp"
            android:id="@+id/tv_startTime"
            android:layout_marginRight="12dp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrows"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp"
            android:id="@+id/tv_endTime"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:layout_alignParentRight="true"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/frequency"
            android:text="1次"
            android:textSize="16dp"
            android:paddingTop="10dp"
            android:textColor="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timePeriod"
            android:text="每年"
            android:textSize="16dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/routine_rule"
        android:background="@drawable/circle_angle_fragment"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rl_line2"
            android:layout_alignParentTop="true"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1.0"
                android:background="@drawable/view_with_frame"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:hint="@string/category"
                    android:id="@+id/category"
                    android:background="@null"
                    android:textAlignment="center"
                    android:singleLine="true"
                    android:paddingLeft="5dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1.0"
                android:background="@drawable/view_with_frame"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:gravity="center"
                    android:paddingRight="5dp"
                    android:id="@+id/tv_time"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rl_line3"
            android:layout_below="@+id/rl_line2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/view_with_frame"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/subcategory"
                    android:paddingLeft="5dp"
                    android:background="@null"
                    android:textAlignment="center"
                    android:singleLine="true"
                    android:id="@+id/sub_category"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/view_with_frame"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/note"
                    android:paddingRight="5dp"
                    android:background="@null"
                    android:textAlignment="center"
                    android:singleLine="true"/>

            </LinearLayout>
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl_line4"
            android:layout_below="@+id/rl_line3"
            >

            <EditText
                android:id="@+id/et_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:inputType="numberDecimal"
                android:background="@null"
                android:textStyle="bold"
                android:hint="@string/price"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:textAlignment="center"
                />

            <ImageButton
                android:id="@+id/ib_save"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:layout_alignParentRight="true"
                android:paddingRight="5dp"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>